--- a/index.html
+++ b/index.html
@@ -214,8 +214,8 @@
           are already regularized (490), while the remainder are at various stages of the regularization process.</p>
       </div>
       <div class="step" id="step3">
-        <p>"Data from Brazil's National Mining Agency (ANM) shows that between 1941 and 2025, there were 2,633 requests 
-          to open mining operations within Indigenous lands."</p>
+        <p>Data from Brazil's National Mining Agency (ANM) shows that between 1941 and 2025, there were 2,633 requests 
+          to open mining operations within Indigenous lands.</p>
       </div>
       <div class="step" id="step4">
         <p>Some Indigenous lands face greater pressure from mining requests. The Kayapó territory has 115 
